--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ project(":desktop") {
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
+        compile "commons-cli:commons-cli:1.3.1"
     }
 }
 
